5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1734_2504.log
== SUBMITION (2019-05-15 22:51:21) 
-- CODE:
qiv= int(input("quantidade inicial de virus: "))
qil= int(input("quantidade inicial de leucocitos: "))
percv= float(input("percentual de crescimento do virus: "))
percl= float(input("percentual de crescimento do leucocito: "))
percv, percl= percv/100, percl/100
t=0
while(2*qiv > qil):
	qiv= qiv + qiv * percv
	qil= qil + * percl
	t= t + 1
print(t)
-- EXECUTION TIME:
0.202809
-- ERROR:
  File "/home/codebench/codes/1734/2504/main.py", line 9
    qil= qil + * percl
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:54:28) 
-- CODE:
qiv= int(input("quantidade inicial de virus: "))
qil= int(input("quantidade inicial de leucocitos: "))
percv= float(input("percentual de crescimento do virus: "))
percl= float(input("percentual de crescimento do leucocito: "))
percv, percl= percv/100, percl/100
t=0
while(2*qiv > qil):
	qiv= qiv + qiv * percv
	qil= qil + qil* percl
	t= t + 1
print(t)
-- EXECUTION TIME:
0.142763
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
